| Bug #32040 | Failed ndbrequire in DbtuxScan.cpp causing NDB to shutdown | ||
|---|---|---|---|
| Submitted: | 2 Nov 2007 1:26 | Modified: | 9 Dec 2013 12:05 |
| Reporter: | Steve Kurzeja | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S2 (Serious) |
| Version: | mysql-5.0 | OS: | Linux (2.6.17-10) |
| Assigned to: | Assigned Account | CPU Architecture: | Any |
| Tags: | 5.0.45, cluster | ||
[2 Nov 2007 1:26]
Steve Kurzeja
[16 Mar 2009 18:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/69338 2774 Pekka Nousiainen 2009-03-16 bug#32040 01_dbtux.diff scanNext: if Locked, try to unlock instead of crashing committed for easy access but not pushed at this time not tested since cannot reproduce the bug modified: ndb/src/kernel/blocks/dbtux/DbtuxScan.cpp
[9 Dec 2013 12:05]
Jon Stephens
Per discussion with developer, it appears this was fixed in NDB 6.3.47, 7.0.28, 7.1.17. Closed.
