bug#32040 a01_org.diff scan moved from locked tuple, try to unlock